--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "list": "cpp",
         "ostream": "cpp",
         "format": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
