--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,16 @@
         "vector": "cpp",
         "list": "cpp",
         "ostream": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
